klipper: Expose selected files through desktop portal

Allow sandboxed applications to get file access through portal after
switching the clipboard buffer.

BUG: 476600